--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,35 @@
 language: python
 install: pip install tox
-env:
-  - TOX_ENV=docs
-  - TOX_ENV=py27-flake8
-  - TOX_ENV=py26-virtualenv-17x
-  - TOX_ENV=py26-virtualenv-18x
-  - TOX_ENV=py26-virtualenv-19x
-  - TOX_ENV=py26-virtualenv-150x
-  - TOX_ENV=py26-virtualenv-151x
-  - TOX_ENV=py27-virtualenv-17x
-  - TOX_ENV=py27-virtualenv-18x
-  - TOX_ENV=py27-virtualenv-19x
-  - TOX_ENV=py27-virtualenv-150x
-  - TOX_ENV=py27-virtualenv-151x
+matrix:
+  include:
+    - python: 2.7
+      env: TOX_ENV=docs
+    - python: 2.7
+      env: TOX_ENV=py27-flake8
+    - python: 2.7
+      env: TOX_ENV=py27-virtualenv-17x
+    - python: 2.7
+      env: TOX_ENV=py27-virtualenv-18x
+    - python: 2.7
+      env: TOX_ENV=py27-virtualenv-19x
+    - python: 2.7
+      env: TOX_ENV=py27-virtualenv-150x
+    - python: 2.7
+      env: TOX_ENV=py27-virtualenv-151x
+    - python: 3.6
+      env: TOX_ENV=py27-virtualenv-150x
+    - python: 3.6
+      env: TOX_ENV=py27-virtualenv-151x
+    - python: 2.6
+      env: TOX_ENV=py26-virtualenv-17x
+    - python: 2.6
+      env: TOX_ENV=py26-virtualenv-18x
+    - python: 2.6
+      env: TOX_ENV=py26-virtualenv-19x
+    - python: 2.6
+      env: TOX_ENV=py26-virtualenv-150x
+    - python: 2.6
+      env: TOX_ENV=py26-virtualenv-151x
 script: tox -e $TOX_ENV
 notifications:
   email:
